objects/ssot__HealthScore__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CurrentScoreDate__c</fullName>
        <label>Current Score Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentScoreValueNumber__c</fullName>
        <label>Current Score Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthScore_SubjectId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthScore_SubjectId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>HealthScore_SubjectId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>HealthScore_SubjectId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__HealthScore_SubjectId_map_Lead_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthScore_SubjectId_map_Lead_Id_N_1</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>HealthScore_SubjectId_map_Lead_Id_N_1</relationshipLabel>
        <relationshipName>HealthScore_SubjectId_map_Lead_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalScoreInformationText__c</fullName>
        <label>Historical Score Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Health Score Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousScoreDate__c</fullName>
        <label>Previous Score Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousScoreNumber__c</fullName>
        <label>Previous Score Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreAndDate__c</fullName>
        <label>Score And Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreCategoryId__c</fullName>
        <label>Score Category</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreChangePercent__c</fullName>
        <label>Score Change Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectId__c</fullName>
        <label>Subject</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectObject__c</fullName>
        <label>Subject Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725831766_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthScore_ScoreCategoryId_map_Heal_rel</label>
        <referenceTo>ssot__HealthScoreCategory__dlm</referenceTo>
        <relationshipLabel>HealthScore_ScoreCategoryId_map_Heal_rel</relationshipLabel>
        <relationshipName>rel_1716725831766_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718544754639_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthScore_SubjectId_map_AccountCon_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>HealthScore_SubjectId_map_AccountCon_rel</relationshipLabel>
        <relationshipName>rel_1718544754639_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744957611235_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthScore_SubjectId_map_CareProgra_rel</label>
        <referenceTo>ssot__CareProgramEnrollee__dlm</referenceTo>
        <relationshipLabel>HealthScore_SubjectId_map_CareProgra_rel</relationshipLabel>
        <relationshipName>rel_1744957611235_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>